--- a/cmd/sch/templates/overview.html
+++ b/cmd/sch/templates/overview.html
@@ -65,12 +65,9 @@
       align-items: center;
     }
     form div {
-      flex-grow: 1;
       display: flex;
+      gap: 8px;
       align-items: center;
-    }
-    form div:first-child {
-      flex-grow: 2;
     }
     form label {
       display: inline-block;
@@ -99,11 +96,11 @@
     <form>
       <div>
         <label>rule</label>
-        <input type="text"/>
+        <input id="rule" type="text"/>
       </div>
       <div>
         <label>level</label>
-        <select>
+        <select id="level">
           <option value="">all</option>
           <option value="warning">warning</option>
           <option value="fatal">fatal</option>
@@ -111,13 +108,26 @@
       </div>
       <div>
         <label>status</label>
-        <select>
+        <select id="status">
           <option value="">all</option>
           <option value="succeed">success</option>
           <option value="error">error</option>
         </select>
       </div>
+      {{ if gt (len .List)  50 }}
+      <div>
+        <label>count</label>
+        <select>
+          {{ if gt (len .List) 10 }}<option value="10">10</option>{{ end }}
+          {{ if gt (len .List) 25 }}<option value="25">25</option>{{ end }}
+          {{ if gt (len .List) 50 }}<option value="50">50</option>{{ end }}
+          {{ if gt (len .List) 100 }}<option value="100">100</option> {{ end }}
+        </select>
+      </div>
+      {{ end }}
     </form>
+    <nav>
+    </nav>
     <table>
       <thead>
         <tr>
@@ -147,6 +157,29 @@
       </tbody>
     </table>
   </main>
+  <script>
+    const rule = document.querySelector('#rule')
+    const level = document.querySelector('#level')
+    const status = document.querySelector('#status')
+
+    function filterTableRows() {
+      const rows = document.querySelectorAll('table tbody tr')
+      Array.from(rows).forEach(r => {
+        const levelNode = r.querySelector('td:nth-child(3)')
+        const errorNode = r.querySelector('td:nth-child(6)')
+        const ok1 = rule.value == "" || r.id.indexOf(rule.value) >= 0
+        const ok2 = level.value == "" || levelNode.textContent == level.value
+        const ok3 = status.value == "" 
+          || (status.value == "succeed" && errorNode.textContent == "") 
+          || (status.value == "error" && errorNode.textContent != "")
+        r.style.display = ok1 && ok2 && ok3 ? "table-row" : "none"
+      })
+    }
+
+    rule.addEventListener("blur", filterTableRows)
+    level.addEventListener("change", filterTableRows)
+    status.addEventListener("change", filterTableRows)
+  </script>
 </body>
 
 </html>
