--- a/cmd/sch/templates/index.html
+++ b/cmd/sch/templates/index.html
@@ -19,7 +19,7 @@
       border-collapse:collapse
     }
     table tbody th{
-      width: 50%
+      width: 40%
     }
     table tbody td:first-child {
       width: 5%;
@@ -63,6 +63,29 @@
       background-color: #FF8F00;
       color: #FFFFFF;
     }
+    aside, h1, h2, h3 {
+      text-align: center;
+    }
+    aside p {
+      font-size: 12px;
+    }
+    aside meter {
+      font-size: 50px;
+    }
+    .loader {
+      display: inline-block;
+      border: 4px solid #f3f3f3;
+      border-radius: 50%;
+      border-top: 4px solid #3498db;
+      width: 16px;
+      height: 16px;
+      -webkit-animation: spin 2s linear infinite; /* Safari */
+      animation: spin 2s linear infinite;
+    }
+    @keyframes spin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
+    }
   </style>
 </head>
 
@@ -71,11 +94,23 @@
     <header>
       <h1>{{ .Title }}</h1>
     </header>
+    {{ if ne .Count .Total }}
+    <aside>
+      <header>
+        <h1>Reports are being created</h1>
+        <h2>When all reports will be ready, the page will be automatically refreshed and their results will be available for viewing</h2>
+      </header>
+      <p>
+        <meter id="progress" min="0" max="{{ .Total }}" value="{{ .Count }}">{{ percent2 .Count .Total }}&percent;</meter>
+      </p>
+    </aside>
+    {{ end }}
     <table>
       <thead>
         <th></th>
         <th>file</th>
         <th>result</th>
+        <th>last modified</th>
         <th></th>
       </thead>
       <tbody>
@@ -83,22 +118,41 @@
         <tr id="{{ $el.Status.File }}" class="{{ statusClass $el.Status }}">
           <td class="text-center">{{ increment $ix}}</td>
           <th>{{ $el.Status.File }}</th>
-          <td width="30%" class="text-center">
+          <td width="10%" class="text-center">
             {{ with $res := percent $el.Status}}
               <span>{{ printf "%.2f" $res }}&percnt;</span>
             {{ end }}
           </td>
           <td class="text-center">
+            {{ datetimefmt .LastMod }}
+          </td>
+          <td class="text-center">
+            {{ if not .Building }}
             <a title="view details" href="{{ $el.Status.File }}/">see</a>
-            {{ if $.Checkable }}
-            <a title="run new check on the document against the schema" href="/process/{{ $el.Status.File }}/">check</a>
-            {{ end }}
+            <a class="process" title="run new check on the document against the schema" href="/process/{{ $el.Status.File }}">process</a>
+            {{ else }}
+            <div class="text-center">
+              <span class="loader"></span>
+            </div>
+            {{end}}
           </td>
         </tr>
         {{ end }}
       </tbody>
     </table>
   </main>
+  <script>
+    async function submitFile(e) {
+      e.preventDefault()
+      await fetch(e.target.href, {method: 'POST'})
+    }
+    document.addEventListener("DOMContentLoaded", () => {
+      const list = Array.from(document.querySelectorAll("a.process"))
+      list.forEach(i => {
+        i.addEventListener("click", submitFile)
+      })
+    })
+  </script>
 </body>
 
 </html>
