--- a/cmd/sch/templates/overview.html
+++ b/cmd/sch/templates/overview.html
@@ -113,9 +113,9 @@
   <main>
     <header>
       <h1>{{.File}}</h1>
-      {{ if .Checkable }}
-      <a title="run new check on the document against the schema" href="/process/{{ .File }}/">check</a>
-      {{ end }}
+      <aside>
+        <a title="run new check on the document against the schema" href="/process/{{ .File }}">process</a>
+      </aside>
     </header>
     <form>
       <div>
