--- a/cmd/sch/templates/overview.html
+++ b/cmd/sch/templates/overview.html
@@ -106,6 +106,20 @@
       text-align: center;
       text-decoration: none;
     }
+    .loader {
+      display: inline-block;
+      border: 4px solid #f3f3f3;
+      border-radius: 50%;
+      border-top: 4px solid #3498db;
+      width: 16px;
+      height: 16px;
+      -webkit-animation: spin 2s linear infinite; /* Safari */
+      animation: spin 2s linear infinite;
+    }
+    @keyframes spin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
+    }
   </style>
 </head>
 
@@ -114,7 +128,11 @@
     <header>
       <h1>{{.File}}</h1>
       <aside>
+        {{ if not .Result.Building }}
         <a title="run new check on the document against the schema" href="/process/{{ .File }}">process</a>
+        {{else}}
+        <div class="loader"></div>
+        {{ end }}
       </aside>
     </header>
     <form>
