--- a/cmd/sch/templates/overview.html
+++ b/cmd/sch/templates/overview.html
@@ -11,7 +11,7 @@
       font-size: 0.9em;
     }
     main {
-      width: 70%;
+      width: 90%;
       margin: 0 auto;
     }
     table{
@@ -127,6 +127,7 @@
   <main>
     <header>
       <h1>{{.File}}</h1>
+      {{ if not .Static }}
       <aside>
         {{ if not .Result.Building }}
         <a title="run new check on the document against the schema" href="/process/{{ .File }}">process</a>
@@ -134,6 +135,7 @@
         <div class="loader"></div>
         {{ end }}
       </aside>
+      {{ end }}
     </header>
     <form>
       <div>
