split css/js from templates

--- a/cmd/sch/templates/detail.html
+++ b/cmd/sch/templates/detail.html
@@ -6,44 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>schema</title>
   <style type="text/css">
-    body {
-      font-family: system-ui;
-      font-size: 0.9em;
-    }
-    main {
-      width: 70%;
-      margin: 0 auto;
-    }
-    p.xpath, pre {
-      border: 1px solid #E0E0E0;
-      background-color: #F5F5F5;
-      padding: 8px;
-    }
-    pre.failure {
-      border-color: #B71C1C;
-      background-color: #FFCDD2;
-    }
-    pre {
-      font-size: 1.15em;
-    }
-    p.xpath {
-      color: #039BE5;
-    }
-    a.back {
-      display: inline-block;
-      outline: none;
-      cursor: pointer;
-      padding: 0 8px;
-      background-color: #fff;
-      border-radius: 0.25rem;
-      border: 1px solid #dddbda;
-      color: #0070d2;
-      font-size: 13px;
-      line-height: 30px;
-      font-weight: 400;
-      text-align: center;
-      text-decoration: none;
-    }
+    {{ template "styles.css" }}
   </style>
 </head>
 
